force-app/main/default/objects/FSM_Metering_BU_Service_Territory__mdt/FSM_Metering_BU_Service_Territory__mdt.object-meta.xml
<CustomObject>
    <description>This Custom meta data is part of JIRA story 3146 &quot;https://stwater-cms.atlassian.net/browse/WWTC-3146?visitedUserSeg=true&quot; ZThis is currently used in flow named &quot;FSM Proformas &amp; Customer Comms - V8 &quot;

Flow Label    FSM Proformas &amp; Customer Comms	      Flow API Name	     FSM_ProformaCustomerComms
. Business required a new proforma and the 2 new existing proforma to run for &quot;Metering Business Unit.</description>
    <label>FSM Metering BU Service Territory</label>
    <pluralLabel>FSM Metering BU Service Territory</pluralLabel>
</CustomObject>