force-app/main/default/objects/FSM_Metering_BU_Service_Territory__mdt/fields/Service_Territory_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Business_Unit__c</fullName>
    <label>Service Territory Business Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>