force-app/main/default/objects/FSM_Metering_BU_Service_Territory__mdt/fields/Service_Territory_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_External_Id__c</fullName>
    <label>Service Territory External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>