force-app/main/default/objects/FSM_Metering_BU_Service_Territory__mdt/fields/Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name__c</fullName>
    <label>Service Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>